--- a/RabotaDlyaTrpo/RabotaDlyaTrpo.csproj
+++ b/RabotaDlyaTrpo/RabotaDlyaTrpo.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
+    <Compile Include="User.cs" />
     <Page Include="Journal.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
